fixed input on mobile

--- a/assets/stylesheets/scss/home.scss
+++ b/assets/stylesheets/scss/home.scss
@@ -15,7 +15,7 @@ html,body {
 	-webkit-font-smoothing: antialiased;
 	text-rendering: geometricPrecision;
 	image-rendering:optimizeQuality;
-	height: 100%;
+	// height: 100%; doesn't work on mobile for android input
 }
 
 
@@ -182,6 +182,7 @@ Hero
 	background-position: center center;
 	position: relative;
 	height: 100%;
+	padding-bottom: 5%;
 	@include breakpoint($x-large) {
 		padding-left: 5%;
 		padding-right: 5%;
